--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,12 +6,12 @@
 
 :root {
   --text-color: white;
-  --bg-url: url(./assets/bg-mobile.jpg);
+  --bg-url: url(/assets/bg-mobile.jpg);
   --stroke-color: rgba(255, 255, 255, 0.50);
   --surface-color: (255, 255, 255, 0.1);
   --surface-color-hover: rgba(255, 255, 100, 0,05);
   --highlight-color: rgba(255, 255, 255, 0.2);
-  --switch-bg-url: url(./assets/moon-stars.svg);
+  --switch-bg-url: url(/assets/moon-stars.svg);
 }
 
 .light {
@@ -21,7 +21,7 @@
   --surface-color: rgba(0, 0, 0, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
   --highlight-color: rgba(0, 0, 0, 0.10);
-  --switch-bg-url: url(./assets/sun.svg);
+  --switch-bg-url: url(/assets/sun.svg);
 }
 
 body {
@@ -127,13 +127,11 @@ ul li a {
   text-decoration: none;
   font-weight: 500;
   transition: background 0.5s;
-
 }
 
 ul li a:hover {
   background: var(--surface-color-hover);
   border: 1.5px solid var(--text-color);
-
 }
 
 #social-links {
@@ -149,7 +147,6 @@ ul li a:hover {
   justify-content: center;
   align-items:center;
   padding: 16px;
-
   transition: background 0.2s;
   border-radius:50%;
 
@@ -166,13 +163,13 @@ footer {
 }
 /* media queries */
 
-@media (min-widht:700px) {
+@media (min-width: 700px) {
   :root {
-    --bg-url: url(./assets/bg-desktop.jpg)
+    --bg-url: url(/assets/bg-desktop.jpg) 
   }
 
   .light {
-    --bg-url: url(./assets/bg-desktop-light.jpg)
+    --bg-url: url(/assets/bg-desktop-light.jpg)
   }
 }
 
