--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,22 +6,22 @@
 
 :root {
   --text-color: white;
-  --bg-url: url(./assets/bg-mobile.jpg);
+  --bg-url: url(/assets/bg-mobile.jpg);
   --stroke-color: rgba(255, 255, 255, 0.50);
   --surface-color: (255, 255, 255, 0.1);
   --surface-color-hover: rgba(255, 255, 100, 0,05);
   --highlight-color: rgba(255, 255, 255, 0.2);
-  --switch-bg-url: url(./assets/moon-stars.svg);
+  --switch-bg-url: url(/assets/moon-stars.svg);
 }
 
 .light {
   --text-color: black;
-  --bg-url: url(./assets/bg-mobile-light.jpg);
+  --bg-url: url(/assets/bg-mobile-light.jpg);
   --stroke-color: rgba(0, 0, 0, 0.50);
   --surface-color: rgba(0, 0, 0, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
   --highlight-color: rgba(0, 0, 0, 0.10);
-  --switch-bg-url: url(./assets/sun.svg);
+  --switch-bg-url: url(/assets/sun.svg);
 }
 
 body {
@@ -165,11 +165,11 @@ footer {
 
 @media (min-width: 700px) {
   :root {
-    --bg-url: url(./assets/bg-desktop.jpg) 
+    --bg-url: url(/assets/bg-desktop.jpg) 
   }
 
   .light {
-    --bg-url: url(./assets/bg-desktop-light.jpg)
+    --bg-url: url(/assets/bg-desktop-light.jpg)
   }
 }
 
